Add precip unit, optionally proba, fix cosmetic issues and add wind info to forecast

--- a/weatherentity.yaml
+++ b/weatherentity.yaml
@@ -22,12 +22,16 @@ fields:
   precip_type_icon: "mdi-umbrella"
   forecast_daily: 1
   forecast_precip_type_icon: "mdi-umbrella"
+  forecast_precip_unit: "mm"
   forecast_title: ""
   forecast_temperature_min: ""
   forecast_temperature_max: ""
   forecast_icon: ""
   forecast_precip_probability: ""
   forecast_precip_type: ""
+  forecast_wind_speed: ""
+  forecast_wind_bearing: ""
+  forecast_bearing_icon: ""
   # Any additional entry must have its fields declared. Not sure we can use arrays in appdaemon/knockout
   forecast_title2: ""
   forecast_temperature_min2: ""
@@ -35,18 +39,27 @@ fields:
   forecast_icon2: ""
   forecast_precip_probability2: ""
   forecast_precip_type2: ""
+  forecast_wind_speed2: ""
+  forecast_wind_bearing2: ""
+  forecast_bearing_icon2: ""
   forecast_title3: ""
   forecast_temperature_min3: ""
   forecast_temperature_max3: ""
   forecast_icon3: ""
   forecast_precip_probability3: ""
   forecast_precip_type3: ""
+  forecast_wind_speed3: ""
+  forecast_wind_bearing3: ""
+  forecast_bearing_icon3: ""
   forecast_title4: ""
   forecast_temperature_min4: ""
   forecast_temperature_max4: ""
   forecast_icon4: ""
   forecast_precip_probability4: ""
   forecast_precip_type4: ""
+  forecast_wind_speed4: ""
+  forecast_wind_bearing4: ""
+  forecast_bearing_icon4: ""
 css: []
 static_css:
   title_style: $weather_sub_style
